force-app/main/default/objects/Web_Module_Log__b/Web_Module_Log__b.object-meta.xml
<CustomObject>
    <description>This object contains the logs from BI, to track the changes in an account transaction.</description>
    <label>Web Module Log</label>
    <pluralLabel>Web Module Logs</pluralLabel>
</CustomObject>