force-app/main/default/objects/Web_Module_Log__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Web Module Logs</relationshipLabel>
    <relationshipName>Web_Module_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>