force-app/main/default/objects/Web_Module_Log__b/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>2</length>
    <type>Text</type>
</CustomField>