force-app/main/default/objects/Web_Module_Log__b/fields/Commitment_period__c.field-meta.xml
<CustomField>
    <fullName>Commitment_period__c</fullName>
    <label>Commitment period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>