force-app/main/default/objects/Web_Module_Log__b/fields/Current_subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_subscription__c</fullName>
    <label>Current subscription</label>
    <length>14</length>
    <type>Text</type>
</CustomField>