force-app/main/default/objects/Web_Module_Log__b/fields/CVR_No__c.field-meta.xml
<CustomField>
    <fullName>CVR_No__c</fullName>
    <label>CVR No</label>
    <length>14</length>
    <type>Text</type>
</CustomField>