force-app/main/default/objects/Web_Module_Log__b/fields/Date_of_activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_activity__c</fullName>
    <label>Date of activity</label>
    <type>DateTime</type>
</CustomField>