force-app/main/default/objects/Web_Module_Log__b/fields/Fokus_BAN__c.field-meta.xml
<CustomField>
    <fullName>Fokus_BAN__c</fullName>
    <label>Fokus BAN</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>