force-app/main/default/objects/Web_Module_Log__b/fields/Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_number__c</fullName>
    <label>Mobile number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>