force-app/main/default/objects/Web_Module_Log__b/fields/New_monthly_subsidy__c.field-meta.xml
<CustomField>
    <fullName>New_monthly_subsidy__c</fullName>
    <label>New monthly subsidy</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>