force-app/main/default/objects/Web_Module_Log__b/fields/Old_monthly_subsidy__c.field-meta.xml
<CustomField>
    <fullName>Old_monthly_subsidy__c</fullName>
    <label>Old monthly subsidy</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>