force-app/main/default/objects/Web_Module_Log__b/fields/Old_subscription__c.field-meta.xml
<CustomField>
    <fullName>Old_subscription__c</fullName>
    <label>Old subscription</label>
    <length>14</length>
    <type>Text</type>
</CustomField>