force-app/main/default/objects/Web_Module_Log__b/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Web Module Logs</relationshipLabel>
    <relationshipName>Web_Module_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>