force-app/main/default/objects/Web_Module_Log__b/fields/RPA_Key__c.field-meta.xml
<CustomField>
    <fullName>RPA_Key__c</fullName>
    <label>RPA-Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>