force-app/main/default/objects/Web_Module_Log__b/fields/Webtool_CVR__c.field-meta.xml
<CustomField>
    <fullName>Webtool_CVR__c</fullName>
    <label>Webtool CVR</label>
    <length>14</length>
    <type>Text</type>
</CustomField>