force-app/main/default/objects/Web_Module_Log__b/fields/Webtool_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Webtool_Unique_ID__c</fullName>
    <label>Webtool Unique ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>